create test branch

--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,9 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+      window._CONFIG = {};
+      window._CONFIG['domianURL'] = 'http://18.167.121.200:8680'; // 本地1
+    </script>
   </body>
 </html>
